# pyproject-autorelease-action

./: .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  action.yml  pyproject.toml  requirements.txt
.github/workflows/: release.yml
pyproject_autorelease_action/: changelog.py  constants.py  main.py
