[tool.poetry]
name = "pyproject-autorelease-action"
version = "1.0.0"
description = "Auto release the python project based on changes version in pyproject.toml"
authors = ["Jag_k <jag.konon@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
github-action-utils = "^1.1.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.280"
pre-commit = "^3.3.2"
black = { version = "^23.7.0", extras = ["d"] }

[tool.poetry.scripts]
run-autorelease = "pyproject_autorelease_action.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.pytest_cache
  | \.mypy_cache
)/
'''

[tool.ruff]
line-length = 120
target-version = "py311"
select = [
    "E", # pyflakes
    "F", # pycodestyle errors
    "W", # pycodestyle warnings
    "UP", # pyupgrade
    "I", # isort
    "C4", # flake8-comprehensions
    "N", # pep8-naming
    "ASYNC", # flake8-async
    "S", # flake8-bandit
    "INT", # flake8-gettext
    "PTH", # flake8-use-pathlib
    "FLY", # flynt
    "RUF", # ruff-specific rules
]
src = ["pyproject_autorelease_action"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F405", "F811", "N999"]
"__main__.py" = ["E402", "F401", "F403", "F405", "F811", "N999"]
